deploy/overlays/local/jupyter-add-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-zib
spec:
  template:
    spec:
      containers:
        - name: jupyter-zib
          volumeMounts:
            - name: git-repo
              mountPath: /home/jovyan/data
              subPath: data
      volumes:
        - name: git-repo
          persistentVolumeClaim:
            claimName: git-repo-pvc
