deploy/overlays/local/jupyter-delete-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-zib
spec:
  template:
    spec:
      containers:
        - name: jupyter-zib
          volumeMounts:
            - name: demo-data
              mountPath: /home/jovyan/data
              $patch: delete
      volumes:
        - name: demo-data
          $patch: delete
